--- a/v3/docker-compose.yml
+++ b/v3/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.9"
 
 services:
-    scrapper:
+    scraper:
         build:
-            context: ./scraper
+            context: ./scrapers/cryptopanic
             dockerfile: scraper.dockerfile
         command: ["python", "main.py"]
         volumes:
-            - ./scraper/main.py:/home/scraper/main.py
+            - ./scrapers/cryptopanic/main.py:/home/scraper/main.py
