--- a/v3/docker-compose.yaml
+++ b/v3/docker-compose.yaml
@@ -54,6 +54,36 @@ services:
             start_period: 5s
         restart: always
 
+    client_db:
+        image: postgres:13
+        environment:
+            POSTGRES_USER: client
+            POSTGRES_PASSWORD: client
+            POSTGRES_DB: client
+        volumes:
+            - client-db-volume:/var/lib/postgresql/data
+        healthcheck:
+            test: [ "CMD", "pg_isready", "-U", "airflow" ]
+            interval: 10s
+            retries: 5
+            start_period: 5s
+        restart: always
+
+    client_initdb:
+        build:
+            context: ./db
+            dockerfile: initdb.Dockerfile
+        command: [ "python", "initdb.py" ]
+        volumes:
+            - ./db:/home/initdb
+        environment:
+            POSTGRES_DB: "client"
+            POSTGRES_PASSWORD: "client"
+            POSTGRES_USER: "client"
+        depends_on:
+            client_db:
+                condition: service_healthy
+
     redis:
         image: redis:latest
         expose:
@@ -272,6 +302,8 @@ services:
         depends_on:
             kafka:
                 condition: service_healthy
+            client_db:
+                condition: service_healthy
         volumes:
             - ./consumers/example/main.py:/home/consumer/main.py
 
@@ -284,4 +316,5 @@ services:
             - "7077:7077"
 volumes:
     postgres-db-volume:
+    client-db-volume:
     kafka_data:
