cleaning repo and bug

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -327,6 +327,17 @@ services:
             - "8880:8080"
             - "7077:7077"
 
+    grafana:
+        image: grafana/grafana-oss:latest
+        ports:
+            - "3000:3000"
+        environment:
+            GF_SECURITY_ADMIN_USER: admin
+            GF_SECURITY_ADMIN_PASSWORD: admin
+        # volumes:
+        #     - ./grafana/provisioning:/etc/grafana/provisioning
+        #     - ./grafana/dashboards:/var/lib/grafana/dashboards
+
 volumes:
     postgres-db-volume:
     client-db-volume:
