--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,13 +23,11 @@ x-airflow-common: &airflow-common
         # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
         # for other purpose (development, test and especially production usage) build/extend Airflow image.
         _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-        USE_DOCKER_PROXY: ${USE_DOCKER_PROXY:-true}
     volumes:
         - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
         - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
         - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
         - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-        - ${DOCKER_SOCK:-/var/run/docker.sock}:/var/run/docker.sock
     user: "${AIRFLOW_UID:-50000}:0"
     depends_on: &airflow-common-depends-on
         redis:
@@ -42,9 +40,7 @@ x-airflow-common: &airflow-common
 services:
     docker-proxy:
         image: bobrik/socat
-        environment:
-            USE_DOCKER_PROXY: ${USE_DOCKER_PROXY:-true}
-        command: /bin/sh -c 'if [ "$$USE_DOCKER_PROXY" = "true" ]; then exec socat TCP4-LISTEN:2375,fork,reuseaddr UNIX-CONNECT:/var/run/docker.sock; else echo "Docker proxy is disabled" && exit 0; fi'
+        command: socat TCP4-LISTEN:2375,fork,reuseaddr UNIX-CONNECT:/var/run/docker.sock
         ports:
         - "2376:2375"
         volumes:
