--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,7 @@ x-airflow-common: &airflow-common
         # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
         # for other purpose (development, test and especially production usage) build/extend Airflow image.
         _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+        GH_TOKEN: ${GH_TOKEN}
     volumes:
         - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
         - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
@@ -270,15 +271,11 @@ services:
         build:
             context: .
             dockerfile: ./scrapers/cryptopanic/scraper.Dockerfile
-        environment:
-            GH_TOKEN: ${GH_TOKEN}
     
     binance-scraper:
         build:
             context: .
-            dockerfile: ./scrapers/cryptopanic/scraper.Dockerfile
-        environment:
-            GH_TOKEN: ${GH_TOKEN}
+            dockerfile: ./scrapers/binance/scraper.Dockerfile
     
 
     zookeeper:
@@ -340,12 +337,9 @@ services:
             GF_SECURITY_ADMIN_USER: admin
             GF_SECURITY_ADMIN_PASSWORD: admin
         volumes:
-            - grafana-data:/var/lib/grafana
-            - grafana-conf:/etc/grafana
+            - ./grafana/data:/var/lib/grafana
+            - ./grafana/conf:/etc/grafana
 
 volumes:
     postgres-db-volume:
     client-db-volume:
-    grafana-conf:
-    grafana-data:
-    kafka-data:
