--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ black = "^23.9.1"
 autoflake = "^2.2.1"
 isort = "^5.13.2"
 
+
+[tool.poetry.group.wss.dependencies]
+websockets = "^12.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
