--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,150 +1,104 @@
 version: "3.9"
 
 x-airflow-common: &airflow-common
-    # In order to add custom dependencies or upgrade provider packages you can use your extended image.
-    # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
-    # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-    build:
-        context: .
-        dockerfile: airflow.Dockerfile
-    # build: .
+    image: epitechuser2077/cryptodata:cryptodata-airflow
+    depends_on: &airflow-common-depends-on
+        redis:
+            condition: service_healthy
+        airflow_db:
+            condition: service_healthy
+        kafka:
+            condition: service_started
     environment: &airflow-common-env
         AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-        AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-        # For backward compatibility, with Airflow <2.3
-        AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-        AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
+        AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow_db/airflow
+        AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow_db/airflow
+        AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@airflow_db/airflow
         AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
         AIRFLOW__CORE__FERNET_KEY: ""
         AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: "true"
         AIRFLOW__CORE__LOAD_EXAMPLES: "false"
         AIRFLOW__API__AUTH_BACKENDS: "airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session"
         AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: "true"
-        # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
-        # for other purpose (development, test and especially production usage) build/extend Airflow image.
-        _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-        GH_TOKEN: ${GH_TOKEN}
-    volumes:
-        - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
-        - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
-        - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
-        - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+        GH_TOKEN: ${AIRFLOW_GH_TOKEN}
     user: "${AIRFLOW_UID:-50000}:0"
-    depends_on: &airflow-common-depends-on
-        redis:
-            condition: service_healthy
-        postgres:
-            condition: service_healthy
-        kafka:
-            condition: service_started
+    volumes:
+        - ${AIRFLOW_DIR:-.}/dags:/opt/airflow/dags
+        - ${AIRFLOW_DIR:-.}/logs:/opt/airflow/logs
+        - ${AIRFLOW_DIR:-.}/config:/opt/airflow/config
+        - ${AIRFLOW_DIR:-.}/plugins:/opt/airflow/plugins
 
 services:
-    docker-proxy:
-        image: bobrik/socat
-        command: "TCP4-LISTEN:2375,fork,reuseaddr UNIX-CONNECT:/var/run/docker.sock"
-        ports:
-        - "2376:2375"
-        volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-
-    postgres:
-        image: postgres:13
-        environment:
-            POSTGRES_USER: airflow
-            POSTGRES_PASSWORD: airflow
-            POSTGRES_DB: airflow
-        volumes:
-            - postgres-db-volume:/var/lib/postgresql/data
-        healthcheck:
-            test: ["CMD", "pg_isready", "-U", "airflow"]
-            interval: 10s
-            retries: 5
-            start_period: 5s
-        restart: always
-
-    redis:
-        image: redis:latest
-        expose:
-            - 6379
-        healthcheck:
-            test: ["CMD", "redis-cli", "ping"]
-            interval: 10s
-            timeout: 30s
-            retries: 50
-            start_period: 30s
-        restart: always
-
     airflow-webserver:
         <<: *airflow-common
         command: webserver
-        ports:
-            - "8080:8080"
-        healthcheck:
-            test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
-            interval: 30s
-            timeout: 10s
-            retries: 5
-            start_period: 30s
-        restart: always
         depends_on:
             <<: *airflow-common-depends-on
             airflow-init:
                 condition: service_completed_successfully
+        healthcheck:
+            interval: 30s
+            retries: 5
+            start_period: 30s
+            test: ["CMD", "curl", "--fail", "${AIRFLOW_WEBSERVER_TEST_CMD_URL}"]
+            timeout: 10s
+        ports:
+            - "${AIRFLOW_WEBSERVER_PORT}:8080"
+        restart: always
 
     airflow-scheduler:
         <<: *airflow-common
         command: scheduler
-        healthcheck:
-            test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
-            interval: 30s
-            timeout: 10s
-            retries: 5
-            start_period: 30s
-        restart: always
         depends_on:
             <<: *airflow-common-depends-on
             airflow-init:
                 condition: service_completed_successfully
+        healthcheck:
+            interval: 30s
+            retries: 5
+            start_period: 30s
+            test: ["CMD", "curl", "--fail", "${AIRFLOW_SCHEDULER_TEST_CMD_URL}"]
+            timeout: 10s
+        restart: always
 
     airflow-worker:
         <<: *airflow-common
         command: celery worker
-        healthcheck:
-            test: ["CMD-SHELL",
-                   'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
-            interval: 30s
-            timeout: 10s
-            retries: 5
-            start_period: 30s
+        depends_on:
+            <<: *airflow-common-depends-on
+            airflow-init:
+                condition: service_completed_successfully
         environment:
             <<: *airflow-common-env
             # Required to handle warm shutdown of the celery workers properly
             # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
             DUMB_INIT_SETSID: "0"
+        healthcheck:
+            interval: 30s
+            retries: 5
+            start_period: 30s
+            test: ["CMD-SHELL", 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
+            timeout: 10s
         restart: always
-        depends_on:
-            <<: *airflow-common-depends-on
-            airflow-init:
-                condition: service_completed_successfully
 
     airflow-triggerer:
         <<: *airflow-common
         command: triggerer
+        depends_on:
+            <<: *airflow-common-depends-on
+            airflow-init:
+                condition: service_completed_successfully
         healthcheck:
+            interval: 30s
+            retries: 5
+            start_period: 30s
+            timeout: 10s
             test:
                 [
                     "CMD-SHELL",
                     'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"',
                 ]
-            interval: 30s
-            timeout: 10s
-            retries: 5
-            start_period: 30s
         restart: always
-        depends_on:
-            <<: *airflow-common-depends-on
-            airflow-init:
-                condition: service_completed_successfully
 
     airflow-init:
         <<: *airflow-common
@@ -215,6 +169,7 @@ services:
         # yamllint enable rule:line-length
         environment:
             <<: *airflow-common-env
+            RATELIMIT_STORAGE_URI: redis://redis:6379/0
             _AIRFLOW_DB_MIGRATE: "true"
             _AIRFLOW_WWW_USER_CREATE: "true"
             _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
@@ -222,139 +177,166 @@ services:
             _PIP_ADDITIONAL_REQUIREMENTS: ""
         user: "0:0"
         volumes:
-            - ${AIRFLOW_PROJ_DIR:-.}:/sources
+            - ${AIRFLOW_DIR:-.}:/sources
 
     airflow-cli:
         <<: *airflow-common
-        profiles:
-            - debug
-        environment:
-            <<: *airflow-common-env
-            CONNECTION_CHECK_MAX_COUNT: "0"
         # Workaround for entrypoint issue. See: https://github.com/apache/airflow/issues/16252
         command:
             - bash
             - -c
             - airflow
+        environment:
+            <<: *airflow-common-env
+            CONNECTION_CHECK_MAX_COUNT: "0"
+        profiles:
+            - ${AIRFLOW_CLI_PROFILE}
+
+    airflow_db:
+        image: postgres:13
+        environment:
+            POSTGRES_USER: $AIRFLOW_DB_USER
+            POSTGRES_PASSWORD: $AIRFLOW_DB_PASSWD
+            POSTGRES_DB: $AIRFLOW_DB_NAME
+        healthcheck:
+            test: ["CMD", "pg_isready", "-U", "${AIRFLOW_DB_USER}"]
+            interval: 10s
+            retries: 5
+            start_period: 5s
+        restart: always
+        volumes:
+            - airflow_db-volume:/var/lib/postgresql/data
+
+    client_db:
+        image: postgres:13
+        environment:
+            POSTGRES_USER: $CLIENT_DB_USER
+            POSTGRES_PASSWORD: $CLIENT_DB_PASSWD
+            POSTGRES_DB: $CLIENT_DB_NAME
+        healthcheck:
+            test: [ "CMD", "pg_isready", "-U", "${CLIENT_DB_USER}" ]
+            interval: 10s
+            retries: 5
+            start_period: 5s
+        restart: always
+        volumes:
+            - client-db-volume:/var/lib/postgresql/data
+
+    client_initdb:
+        image: epitechuser2077/cryptodata:cryptodata-client_initdb
+        command: [ "python", "initdb.py" ]
+        environment:
+            POSTGRES_DB: $INIT_CLIENT_DB_USER
+            POSTGRES_PASSWORD: $INIT_CLIENT_DB_PASSWD
+            POSTGRES_USER: $INIT_CLIENT_DB_NAME
+        depends_on:
+            client_db:
+                condition: service_healthy
+        volumes:
+            - ../db:/home/initdb
+
+    redis:
+        image: redis:latest
+        expose:
+            - 6379
+        healthcheck:
+            test: ["CMD", "redis-cli", "ping"]
+            interval: 10s
+            timeout: 30s
+            retries: 50
+            start_period: 30s
+        restart: always
 
     zookeeper:
         image: confluentinc/cp-zookeeper:latest
         environment:
-            ZOOKEEPER_CLIENT_PORT: 2181
-            ZOOKEEPER_TICK_TIME: 2000
+            ZOOKEEPER_CLIENT_PORT: $ZOOKEEPER_CLIENT_PORT
+            ZOOKEEPER_TICK_TIME: $ZOOKEEPER_TICK_TIME
 
     kafka:
         image: confluentinc/cp-kafka:latest
         depends_on:
             - zookeeper
         ports:
-            - "9092:9092" # Only expose one port that will be used both internally and externally if needed
+            - "${KAFKA_PORT}:9092" # Only expose one port that will be used both internally and externally if needed
         environment:
-            KAFKA_BROKER_ID: 1
-            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-            KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_BROKER_ID: $KAFKA_BROKER_ID
+            KAFKA_ZOOKEEPER_CONNECT: $KAFKA_ZOOKEEPER_CONNECT
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: $KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+            KAFKA_ADVERTISED_LISTENERS: $KAFKA_ADVERTISED_LISTENERS
+            KAFKA_LISTENERS: $KAFKA_LISTENERS
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: $KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
         healthcheck:
-          test: kafka-topics --bootstrap-server kafka:9092 --list
+          test: kafka-topics --bootstrap-server kafka:${KAFKA_PORT} --list
           interval: 10s
           timeout: 10s
           retries: 3
 
-    client_db:
-        image: postgres:13
-        environment:
-            POSTGRES_USER: client
-            POSTGRES_PASSWORD: client
-            POSTGRES_DB: client
-        volumes:
-            - client-db-volume:/var/lib/postgresql/data
-        healthcheck:
-            test: [ "CMD", "pg_isready", "-U", "client" ]
-            interval: 10s
-            retries: 5
-            start_period: 5s
-        restart: always
-
-    client_initdb:
-        build:
-            context: .
-            dockerfile: ./db/initdb.Dockerfile
-        command: [ "python", "initdb.py" ]
-        volumes:
-            - ./db:/home/initdb
-        environment:
-            POSTGRES_DB: "client"
-            POSTGRES_PASSWORD: "client"
-            POSTGRES_USER: "client"
-        depends_on:
-            client_db:
-                condition: service_healthy
-    
     cryptopanic-scraper:
-        build:
-            context: .
-            dockerfile: ./scrapers/cryptopanic/scraper.Dockerfile
-    
+        image: epitechuser2077/cryptodata:cryptodata-cryptopanic-scraper
+        command: ["tail", "-f", "/dev/null"]
+
     binance-scraper:
-        build:
-            context: .
-            dockerfile: ./scrapers/binance/scraper.Dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-binance-scraper
+        command: ["tail", "-f", "/dev/null"]
 
     scraped_consumer:
-        build:
-            context: .
-            dockerfile: ./consumers/scraped/scraped.Dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-scraped_consumer
         command: [ "python", "main.py" ]
-        tty: true
-        environment:
-            POSTGRES_DB: "client"
-            POSTGRES_PASSWORD: "client"
-            POSTGRES_USER: "client"
         depends_on:
             kafka:
                 condition: service_healthy
             client_db:
                 condition: service_healthy
+        environment:
+            POSTGRES_DB: "${CLIENT_DB_NAME}"
+            POSTGRES_PASSWORD: "${CLIENT_DB_PASSWD}"
+            POSTGRES_USER: "${CLIENT_DB_USER}"
+        tty: true
         volumes:
-            - ./consumers/scraped:/home/consumer
+            - ../consumers/scraped:/home/consumer
 
     spark:
-        build:
-            context: ./spark
-            dockerfile: spark.Dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-spark
         ports:
-            - "8880:8080"
-            - "7077:7077"
+            - "${SPARK_UI_PORT}:8080"
+            - "${SPARK_WORKER_PORT}:7077"
 
     grafana:
         image: grafana/grafana-oss:latest
         ports:
-            - "3000:3000"
+            - "${GRAFANA_PORT}:3000"
         environment:
-            GF_SECURITY_ADMIN_USER: admin
-            GF_SECURITY_ADMIN_PASSWORD: admin
+            GF_SECURITY_ADMIN_USER: ${GRAFANA_SECURITY_ADMIN_USER}
+            GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_SECURITY_ADMIN_PASSWORD}
+        user: "0:0"
         volumes:
-            - ./grafana/data:/var/lib/grafana
-            - ./grafana/conf:/etc/grafana
-    
+            - ../grafana/conf/grafana.ini:/etc/grafana/grafana.ini
+            - ../grafana/conf/ladp.toml:/etc/grafana/ladp.toml
+            - ../grafana/data:/var/lib/grafana:rw
+
     wss:
-        build:
-            context: .
-            dockerfile: ./crypto-wss/wss.Dockerfile
-        volumes: 
-            - ./crypto-wss:/srv/app
+        image: epitechuser2077/cryptodata:cryptodata-wss
+        volumes:
+            - ../crypto-wss:/srv/app
         tty: true
         depends_on:
           client_db:
             condition: service_healthy
         environment:
             BLOCKCHAIN_API_KEY: ${BLOCKCHAIN_API_KEY}
-            POSTGRES_USER: client
-            POSTGRES_PASSWORD: client
-            POSTGRES_DB: client
+            POSTGRES_USER: ${CLIENT_DB_USER}
+            POSTGRES_PASSWORD: ${CLIENT_DB_PASSWD}
+            POSTGRES_DB: ${CLIENT_DB_NAME}
+
+    docker-proxy:
+        image: bobrik/socat
+        command: "TCP4-LISTEN:2375,fork,reuseaddr UNIX-CONNECT:/var/run/docker.sock"
+        ports:
+        - "${PROXY_PORT}:2375"
+        volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
 
 volumes:
-    postgres-db-volume:
+    airflow_db-volume:
     client-db-volume:
