[WIP] Dags are running well

--- a/env-vars/.env.dev
+++ b/env-vars/.env.dev
@@ -14,6 +14,7 @@ AIRFLOW_DB_NAME=airflow
 
 BLOCKCHAIN_API_KEY=your_blockchain_api_key
 
+GH_TOKEN=your_github_token
 
 CLIENT_DB_USER=client
 CLIENT_DB_PASSWD=client
