[WIP] I'm pretty sure that you have better to do than look at this commit

--- a/docker/docker-compose-ansible.prod.yml
+++ b/docker/docker-compose-ansible.prod.yml
@@ -8,8 +8,8 @@ networks:
 services:
   ansible_builder:
     build:
-      context: ../deployment/ansible/cryptodata-deployment
-      dockerfile: Dockerfile
+      context: ../deployment/ansible
+      dockerfile: ansible.dockerfile
     env_file:
       - '${ENV}'
     networks:
