--- a/env-vars/.env.ansible.prod.example
+++ b/env-vars/.env.ansible.prod.example
@@ -1,15 +1,16 @@
-ANSIBLE_CONFIG=/absolute/path/to/your/ansible.cfg
-CONTROL_NODE_INVENTORIES_DIR=/absolute/path/to/inventory/dir
-CONTROL_NODE_PLAYBOOKS_DIR=/absolute/path/to/playbook/dir
-CONTROL_NODE_SSH_PRIVATE_KEY_LOCATION=/path/to/private/key
-CONTROL_NODE_SSH_PUBLIC_KEY_LOCATION=/path/to/public/key
-SERVER_03100_ARCH=<your-host-arch> # For instance x86_64
-SERVER_03100_DISTRO=<your-host-distro> # For instance ubuntu2004
-SERVER_03100_USER=your_ssh_user
-SERVER_03100_USER_SSH_PASS=your_ssh_password
-SERVER_03100_SSH_PORT=your_ssh_port
-SERVER_03100_SSH_DEFAULT_PORT=your_default_ssh_port
+ANSIBLE_CONFIG=absolute_path_to_your_ansible.cfg
+CONTROL_NODE_INVENTORIES_DIR=absolute_path_to_inventory_dir
+CONTROL_NODE_PLAYBOOKS_DIR=absolute_path_to_playbook_dir
+CONTROL_NODE_SSH_PRIVATE_KEY_LOCATION=path_to_private_key
+CONTROL_NODE_SSH_PUBLIC_KEY_LOCATION=path_to_public_key
+SERVER_03100_ARCH=your_host_arch # For instance x86_64
+SERVER_03100_DISTRO=your_host_distro # For instance ubuntu2004
 SERVER_03100_HOST=your_host
+SERVER_03100_SSH_DEFAULT_PORT=your_default_ssh_port
+SERVER_03100_SSH_KEY_NAME=your_ssh_key_name
+SERVER_03100_SSH_PORT=your_ssh_port
+SERVER_03100_SSH_PRIVATE_KEY_FILE=path_to_private_key_for_host
+SERVER_03100_SSH_PUBLIC_KEY_FILE=path_to_public_key_for_host
 SERVER_03100_SUDO_PASS=your_sudo_password
-SERVER_03100_SSH_PRIVATE_KEY_FILE=/path/to/private/key/for/host
-SERVER_03100_SSH_PUBLIC_KEY_FILE=/path/to/public/key/for/host
+SERVER_03100_USER_SSH_PASS=your_ssh_password
+SERVER_03100_USER=your_ssh_user
