[WIP] I'm pretty sure that you have better to do than look at this commit

--- a/deployment/ansible/playbook/server-config.yml
+++ b/deployment/ansible/playbook/server-config.yml
@@ -36,6 +36,7 @@
           - make
           - pkg-config
           - python3-setuptools
+          - snapd
           - software-properties-common
           - wget
 
