--- a/deployment/ansible/playbook/server-install.yml
+++ b/deployment/ansible/playbook/server-install.yml
@@ -10,3 +10,33 @@
       arch: "{{ lookup('ansible.builtin.env', 'SERVER_03100_ARCH') }}"
       distro: "{{ lookup('ansible.builtin.env', 'SERVER_03100_DISTRO') }}"
   tasks:
+    - name: Check that snapd is correctly installed
+      apt:
+        name: snapd
+        state: present
+    - name: Install kubernetes
+      ansible.builtin.shell:
+        cmd: snap install microk8s --classic
+      become: true
+    - name: Ajouter l'utilisateur au groupe microk8s
+      ansible.builtin.user:
+        name: "{{ ansible_user }}"
+        groups: microk8s
+        append: yes
+      become: true
+    - name: Changer la propriété du dossier .kube pour l'utilisateur
+      ansible.builtin.file:
+        path: "/home/{{ ansible_user }}/.kube"  # Utilise le chemin absolu vers le dossier .kube de l'utilisateur
+        state: directory
+        owner: "{{ ansible_user }}"
+        recurse: yes
+      become: true
+    - name: "Ensure that MicroK8s is running by checking the status with the following command"
+      ansible.builtin.shell:
+        cmd: microk8s status --wait-ready
+    - name: "Enable Kubernetes Dashboard"
+      ansible.builtin.shell:
+        cmd: microk8s enable dashboard
+    - name: " Enable Additional Services"
+      ansible.builtin.shell:
+        cmd: microk8s enable dns storage ingress cert-manager
