--- a/deployment/k8s/secrets/airflow-db/airflow-db-secrets.yml
+++ b/deployment/k8s/secrets/airflow-db/airflow-db-secrets.yml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: airflow-db-secret
 type: Opaque
-data:
-  POSTGRES_USER: <base64-encoded-username>
-  POSTGRES_PASSWORD: <base64-encoded-password>
-  POSTGRES_DB: <base64-encoded-database-name>
+stringData:
+  POSTGRES_USER: "airflow_db_user_placeholder"
+  POSTGRES_PASSWORD: "airflow_db_password_placeholder"
+  POSTGRES_DB: "airflow_db_name_placeholder"
