--- a/deployment/k8s/deployments/airflow-triggerer-deployment.yml
+++ b/deployment/k8s/deployments/airflow-triggerer-deployment.yml
@@ -1,70 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: airflow-webserver
+  name: airflow-triggerer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: airflow-webserver
+      component: airflow-triggerer
   template:
     metadata:
       labels:
-        app: airflow-webserver
+        component: airflow-triggerer
     spec:
-      initContainers:
-      - name: airflow-init
-        image: epitechuser2077/cryptodata:cryptodata-airflow
-        command: ["/bin/bash", "/scripts/init.sh"]
-        volumeMounts:
-        - name: init-script
-          mountPath: /scripts
-        - name: dags
-          mountPath: /opt/airflow/dags
-        - name: logs
-          mountPath: /opt/airflow/logs
-        - name: config
-          mountPath: /opt/airflow/config
-        - name: plugins
-          mountPath: /opt/airflow/plugins
-        envFrom:
-        - configMapRef:
-            name: airflow-config
-        - secretRef:
-            name: airflow-secrets
       containers:
-      - name: airflow-webserver
+      - name: airflow-triggerer
         image: epitechuser2077/cryptodata:cryptodata-airflow
-        command: ["webserver"]
-        ports:
-        - containerPort: 8080
+        command: ["airflow", "triggerer"]
         envFrom:
         - configMapRef:
             name: airflow-config
         - secretRef:
             name: airflow-secrets
         volumeMounts:
-        - name: dags
+        - name: dags-volume
           mountPath: /opt/airflow/dags
-        - name: logs
+        - name: logs-volume
           mountPath: /opt/airflow/logs
-        - name: config
+        - name: config-volume
           mountPath: /opt/airflow/config
-        - name: plugins
+        - name: plugins-volume
           mountPath: /opt/airflow/plugins
         readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
+          exec:
+            command: ["sh", "-c", "airflow jobs check --job-type TriggererJob --hostname \"$(hostname)\""]
           initialDelaySeconds: 30
           periodSeconds: 30
           timeoutSeconds: 10
-          successThreshold: 1
           failureThreshold: 5
       volumes:
-      - name: init-script
-        configMap:
-          name: airflow-init-script
       - name: dags-volume
         persistentVolumeClaim:
           claimName: airflow-dags-pvc
