--- a/deployment/k8s/deployments/airflow-worker-deployment.yml
+++ b/deployment/k8s/deployments/airflow-worker-deployment.yml
@@ -1,70 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: airflow-webserver
+  name: airflow-worker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: airflow-webserver
+      component: airflow-worker
   template:
     metadata:
       labels:
-        app: airflow-webserver
+        component: airflow-worker
     spec:
-      initContainers:
-      - name: airflow-init
-        image: epitechuser2077/cryptodata:cryptodata-airflow
-        command: ["/bin/bash", "/scripts/init.sh"]
-        volumeMounts:
-        - name: init-script
-          mountPath: /scripts
-        - name: dags
-          mountPath: /opt/airflow/dags
-        - name: logs
-          mountPath: /opt/airflow/logs
-        - name: config
-          mountPath: /opt/airflow/config
-        - name: plugins
-          mountPath: /opt/airflow/plugins
-        envFrom:
-        - configMapRef:
-            name: airflow-config
-        - secretRef:
-            name: airflow-secrets
       containers:
-      - name: airflow-webserver
+      - name: airflow-worker
         image: epitechuser2077/cryptodata:cryptodata-airflow
-        command: ["webserver"]
-        ports:
-        - containerPort: 8080
+        command: ["airflow", "celery", "worker"]
         envFrom:
         - configMapRef:
             name: airflow-config
         - secretRef:
             name: airflow-secrets
         volumeMounts:
-        - name: dags
+        - name: dags-volume
           mountPath: /opt/airflow/dags
-        - name: logs
+        - name: logs-volume
           mountPath: /opt/airflow/logs
-        - name: config
+        - name: config-volume
           mountPath: /opt/airflow/config
-        - name: plugins
+        - name: plugins-volume
           mountPath: /opt/airflow/plugins
         readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
+          exec:
+            command:
+            - sh
+            - -c
+            - "celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d \"celery@$(hostname)\" || celery --app airflow.executors.celery_executor.app inspect ping -d \"celery@$(hostname)\""
           initialDelaySeconds: 30
           periodSeconds: 30
           timeoutSeconds: 10
           successThreshold: 1
           failureThreshold: 5
       volumes:
-      - name: init-script
-        configMap:
-          name: airflow-init-script
       - name: dags-volume
         persistentVolumeClaim:
           claimName: airflow-dags-pvc
