[WIP] Writing kubernetes manifest for kubernetes operators

--- a/deployment/k8s/deployments/binance-scraper-deployment.yml
+++ b/deployment/k8s/deployments/binance-scraper-deployment.yml
@@ -16,6 +16,9 @@ spec:
       - name: binance-scraper
         image: epitechuser2077/cryptodata:cryptodata-binance-scraper
         command: ["tail", "-f", "/dev/null"]
+        env:
+        - name: AIRFLOW_ENV
+          value: "PROD"
         # Example liveness probe; adjust according to actual health check logic
         livenessProbe:
           exec:
