--- a/deployment/ansible/ansible.cfg
+++ b/deployment/ansible/ansible.cfg
@@ -11,10 +11,10 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-inventory       = ~/ansible-deployment/inventory
+inventory       = /home/ansible-deployment/inventory
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils    = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
-#remote_tmp      = ~/.ansible/tmp
+remote_tmp      = /home/ansible-deployment/tmp
 #local_tmp       = ~/.ansible/tmp
 #forks           = 5
 #poll_interval   = 0.001
