--- a/deployment/k8s/deployments/airflow-webserver-deployment.yaml
+++ b/deployment/k8s/deployments/airflow-webserver-deployment.yaml
@@ -19,13 +19,13 @@ spec:
         volumeMounts:
         - name: init-script
           mountPath: /scripts
-        - name: dags
+        - name: dags-volume
           mountPath: /opt/airflow/dags
-        - name: logs
+        - name: logs-volume
           mountPath: /opt/airflow/logs
-        - name: config
+        - name: config-volume
           mountPath: /opt/airflow/config
-        - name: plugins
+        - name: plugins-volume
           mountPath: /opt/airflow/plugins
         envFrom:
         - configMapRef:
@@ -44,13 +44,13 @@ spec:
         - secretRef:
             name: airflow-secrets
         volumeMounts:
-        - name: dags
+        - name: dags-volume
           mountPath: /opt/airflow/dags
-        - name: logs
+        - name: logs-volume
           mountPath: /opt/airflow/logs
-        - name: config
+        - name: config-volume
           mountPath: /opt/airflow/config
-        - name: plugins
+        - name: plugins-volume
           mountPath: /opt/airflow/plugins
         readinessProbe:
           httpGet:
