--- a/deployment/k8s/services/grafana-service.yml
+++ b/deployment/k8s/services/grafana-service.yml
@@ -4,6 +4,8 @@ metadata:
   name: grafana
 spec:
   type: ClusterIP
-  targetPort: 3000
+  ports:
+  - port: 3000
+    targetPort: 3000
   selector:
     app: grafana
