--- a/deployment/k8s/deployments/kafka-deployment.yml
+++ b/deployment/k8s/deployments/kafka-deployment.yml
@@ -25,7 +25,14 @@ spec:
             - sh
             - -c
             - "kafka-topics --bootstrap-server localhost:9092 --list"
-          initialDelaySeconds: 30
+          initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
-          failureThreshold: 3
+          failureThreshold: 8
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu: "500m"
+          limits:
+            memory: "2Gi"
+            cpu: "1000m"
