--- a/deployment/k8s/deployments/kafka-deployment.yml
+++ b/deployment/k8s/deployments/kafka-deployment.yml
@@ -18,15 +18,19 @@ spec:
         - configMapRef:
             name: kafka-config
         livenessProbe:
-          exec:
-            command:
-            - sh
-            - -c
-            - "kafka-topics --bootstrap-server localhost:9092 --list"
-          initialDelaySeconds: 60
+          tcpSocket:
+            port: 9092
+          initialDelaySeconds: 120  # Adjust based on your observation
           periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 8
+          # exec:
+          #   command:
+          #   - sh
+          #   - -c
+          #   - "kafka-topics --bootstrap-server localhost:9092 --list"
+          # initialDelaySeconds: 60
+          # periodSeconds: 10
+          # timeoutSeconds: 5
+          # failureThreshold: 8
         resources:
           requests:
             memory: "1Gi"
