--- a/deployment/k8s/jobs/airflow-cli-job.yml
+++ b/deployment/k8s/jobs/airflow-cli-job.yml
@@ -14,4 +14,4 @@ spec:
             name: airflow-config
         - secretRef:
             name: airflow-secrets
-      restartPolicy: Never
+      restartPolicy: OnFailure
