--- a/deployment/k8s/pvcs/grafana-pvcs.yml
+++ b/deployment/k8s/pvcs/grafana-pvcs.yml
@@ -8,6 +8,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  storageClassName: ceph-rbd
 
 ---
 apiVersion: v1
@@ -20,3 +21,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
+  storageClassName: ceph-rbd
