--- a/deployment/k8s/pvcs/kafka-pvc.yml
+++ b/deployment/k8s/pvcs/kafka-pvc.yml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: kafka-data-pvc
-  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
+  storageClassName: ceph-rbd
